maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value aMurSud
    if(!aMurSud(x,y)){indic(x,y+1,i+1)}
        ^JediEscaper:14: error: not found: value aMurEst
    if(!aMurEst(x,y)){indic(x+1,y,i+1)}
        ^JediEscaper:23: error: not enough arguments for method indic: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  indic(x,y)
       ^JediEscaper:25: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurNord(getX(),getY()) && getIndication(getX(),getY()-1)){
                                                ^JediEscaper:27: error: not found: value aMurSUD
    if(!aMurSUD(getX(),getY()) && getIndication(getX(),getY()+1)){
        ^JediEscaper:29: error: not found: value aMurEST
    if(!aMurEST(getX(),getY()) && getIndication(getX()+1,getY())){
        ^JediEscaper:31: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurOuest(getX(),getY()) && getIndication(getX()+1,getY())){
                                                 ^JediEscaper:32: error: value Ouest is not a member of object plm.universe.Direction
      dir = Direction.Ouest; ind=getIndication(getX()+1,getY())}
                      ^